Lab-Assignment 1
Microsoft Windows [Version 10.0.26100.7462]
(c) Microsoft Corporation. All rights reserved.

C:\Users\12san>mongosh
Current Mongosh Log ID: 6962add55541da38d963b111
Connecting to:          mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.5.9
Using MongoDB:          8.0.4
Using Mongosh:          2.5.9

For mongosh info see: https://www.mongodb.com/docs/mongodb-shell/

------
   The server generated these startup warnings when booting
   2026-01-11T00:48:21.227+05:30: Access control is not enabled for the database. Read and write access to data and configuration is unrestricted
------

test> use collegeDB
switched to db collegeDB
collegeDB> db.createCollection("students")
{ ok: 1 }
collegeDB> db.students.insertOne({
... name:"Sandip Maity",
... rollNo:101,
... department:"CSE",
... age:20
... })
{
  acknowledged: true,
  insertedId: ObjectId('6962b0ef5541da38d963b112')
}
collegeDB> db.students.insertMany([
... name:"Sandip Maity",
Uncaught:
SyntaxError: Unexpected token, expected "," (2:4)

  1 | db.students.insertMany([
> 2 | name:"Sandip Maity",
    |     ^
  3 |

collegeDB> db.students.insertMany([{
... name:"Sujata Maity",
... rollNo:102,
... department:"ECE",
... age:21},{
... name:"Sanskriti Sharma",
... rollNo:103,
... department:"ME",
... age:22}
... ,{
... name:"Saikat Das",
... rollNo:103,
... department:"EE",
... age:23},{
... name:"Arpita Saha",
... rollNo:104,
... department:"CSE",
... age:24},{
... name:"Monmon Ghosh",
... rollNo:105,
... department:"CSE",
... age:24}])
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('6962b2815541da38d963b113'),
    '1': ObjectId('6962b2815541da38d963b114'),
    '2': ObjectId('6962b2815541da38d963b115'),
    '3': ObjectId('6962b2815541da38d963b116'),
    '4': ObjectId('6962b2815541da38d963b117')
  }
}
collegeDB> db.students.find()
[
  {
    _id: ObjectId('6962b0ef5541da38d963b112'),
    name: 'Sandip Maity',
    rollNo: 101,
    department: 'CSE',
    age: 20
  },
  {
    _id: ObjectId('6962b2815541da38d963b113'),
    name: 'Sujata Maity',
    rollNo: 102,
    department: 'ECE',
    age: 21
  },
  {
    _id: ObjectId('6962b2815541da38d963b114'),
    name: 'Sanskriti Sharma',
    rollNo: 103,
    department: 'ME',
    age: 22
  },
  {
    _id: ObjectId('6962b2815541da38d963b115'),
    name: 'Saikat Das',
    rollNo: 103,
    department: 'EE',
    age: 23
  },
  {
    _id: ObjectId('6962b2815541da38d963b116'),
    name: 'Arpita Saha',
    rollNo: 104,
    department: 'CSE',
    age: 24
  },
  {
    _id: ObjectId('6962b2815541da38d963b117'),
    name: 'Monmon Ghosh',
    rollNo: 105,
    department: 'CSE',
    age: 24
  }
]
collegeDB> db.students.updateOne({
...
...
collegeDB> db.students.find({department:"CSE"})
[
  {
    _id: ObjectId('6962b0ef5541da38d963b112'),
    name: 'Sandip Maity',
    rollNo: 101,
    department: 'CSE',
    age: 20
  },
  {
    _id: ObjectId('6962b2815541da38d963b116'),
    name: 'Arpita Saha',
    rollNo: 104,
    department: 'CSE',
    age: 24
  },
  {
    _id: ObjectId('6962b2815541da38d963b117'),
    name: 'Monmon Ghosh',
    rollNo: 105,
    department: 'CSE',
    age: 24
  }
]
collegeDB> db.students.updateOne({
... rollNo:101},
... {$set:{age:21}}
... )
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
collegeDB> db.students.deleteOne({rollNo:104})
{ acknowledged: true, deletedCount: 1 }
collegeDB> db.students.find()
[
  {
    _id: ObjectId('6962b0ef5541da38d963b112'),
    name: 'Sandip Maity',
    rollNo: 101,
    department: 'CSE',
    age: 21
  },
  {
    _id: ObjectId('6962b2815541da38d963b113'),
    name: 'Sujata Maity',
    rollNo: 102,
    department: 'ECE',
    age: 21
  },
  {
    _id: ObjectId('6962b2815541da38d963b114'),
    name: 'Sanskriti Sharma',
    rollNo: 103,
    department: 'ME',
    age: 22
  },
  {
    _id: ObjectId('6962b2815541da38d963b115'),
    name: 'Saikat Das',
    rollNo: 103,
    department: 'EE',
    age: 23
  },
  {
    _id: ObjectId('6962b2815541da38d963b117'),
    name: 'Monmon Ghosh',
    rollNo: 105,
    department: 'CSE',
    age: 24
  }
]
collegeDB>
